[tool.poetry]
name = "gitgood"
version = "0.1.0a"
description = ""
authors = ["QEDK <qedk.en@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.3.2"}
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gg = "gitgood.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
